--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,5 +36,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script
+  src="https://maps.googleapis.com/maps/api/js?key=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&libraries=places"
+  async
+  defer
+></script>
   </body>
 </html>
